--- a/toggled-search-bar.html
+++ b/toggled-search-bar.html
@@ -37,8 +37,11 @@ $('.search-form-wrapper').click(function(event) {
          <a class="navbar-brand" href="#">Project name</a>
       </div>
       <div id="navbar" class="navbar-collapse collapse">
-         <div class="navbar-form navbar-right">
+         <div class="hidden-xs navbar-form navbar-right">
             <a onclick="documentTrack('#search');" href="#search" class="search-form-tigger btn btn-success"  data-toggle="search-form"><i class="fa fa-search" aria-hidden="true"></i></a>
+         </div>
+		 <div class="visible-xs navbar-form navbar-right">
+            <input type="text" name="search" class="search form-control" placeholder="Search">
          </div>
          <!--/.navbar-collapse -->
       </div>
